# sdf_to_mesh

./: .gitignore  Cargo.toml  README.md  example.sdf
dsl/: example.sdf  grammar.tx  interpreter.py  sdf.py
dsl/tests/: conftest.py  test_arithmetic.py  test_literals.py  test_math.py  test_swizzle.py  test_types.py
src/: lib.rs  main.rs  marching_cubes.rs
src/sdf/: ast.rs  eval.rs  mod.rs  parser.rs  primitives.rs
src/sdf/resources/: grammar.pest
tests/: eval.rs  marching_cubes.rs  primitives.rs
