[package]
name = "mesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.6"
glam = "0.24.1"
pest = "2.8.6"
pest_derive = "2.8.6"
rayon = "1.12.0"
stl_io = "0.7.0"
spatialtree = "0.1.3"
meshopt = "0.6.2"
